Including necessary files

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
  <head>
-  <link rel="stylesheet" type="text/css" href="styles.css"/>
+  <link rel="stylesheet" type="text/css" href="css/styles.css"/>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Unbiased CFB</title>
-  <script type="text/javascript" src="functions.js"></script>
+  <script type="text/javascript" src="js/functions.js"></script>
  </head>
  <body onload="loadDropdownOptions()">
   <div class="header">
     <div class="mainlogo">
-      <img src="sqrlogo.png" alt="Square logo, click to go back to home page" width="100%" height="auto"/>
+      <img src="img/sqrlogo.png" alt="Square logo, click to go back to home page" width="100%" height="auto"/>
     </div>
     <div class="title">
       <h1>New Title</h1>
