Creating website home page

--- a/index.html
+++ b/index.html
@@ -1,29 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
  <head>
-  <link rel="stylesheet" type="text/css" href="css/styles.css"/>
+  <link rel="stylesheet" type="text/css" href="css/stylesmain.css"/>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Unbiased CFB</title>
-  <script type="text/javascript" src="js/functions.js"></script>
+  <title>LDNelson16 Home</title>
  </head>
- <body onload="loadDropdownOptions()">
-  <div class="header">
-    <div class="mainlogo">
-      <img src="img/sqrlogo.png" alt="Square logo, click to go back to home page" width="100%" height="auto"/>
+ <body>
+  <div class="parent">
+    <div class="div1">HI </div>
+    <div class="div2"> </div>
+    <div class="div3"> </div>
+    <div class="div4"> </div>
+    <div class="div5"> </div>
+    <div class="div6"> </div>
+    <div class="div7"> </div>
     </div>
-    <div class="title">
-      <h1>New Title</h1>
-    </div>
-  </div>
-  <label for="cars">Choose a date:</label>
-  <select id = "dropdown" onchange = "selectedDropdownOption()">
-    <!--add options here-->
-    <option>1</option>
-    <option>2</option>
-  </select>
-  <div>
-
-  </div>
  </body>
 </html>
