--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
- <head>
-  <link rel="stylesheet" type="text/css" href="css/stylesmain.css"/>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LDNelson16 Home</title>
- </head>
- <body>
-  <div class="parent">
-    <div class="div1">HI </div>
-    <div class="div2"> </div>
-    <div class="div3"> </div>
-    <div class="div4"> </div>
-    <div class="div5"> </div>
-    <div class="div6"> </div>
-    <div class="div7"> </div>
-    </div>
- </body>
+<html>
+<head>
+  <link rel="stylesheet" href="css/stylesmain.css">
+</head>
+<body>
+
+<div class="grid-container">
+  <div class="header">
+    <h2>LDNelson16 Portfolio</h2>
+  </div>
+  <div class="nav">
+    <h2>Nav</h2>
+  </div>
+  
+  <div class="left" style="background-color:#433d7e;">Column</div>
+  <div class="middle" style="background-color:#1d0335;">Column</div>  
+  <div class="right" style="background-color:#0d3452;">Column</div>
+  
+  <div class="footer">
+  <p>Footer</p>
+  </div>
+</div>
+
+</body>
 </html>
