Still working on designs

--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
 
 <div class="grid-container">
   <div class="header">
-    <h2>LDNelson16 Portfolio</h2>
+    <h2>LDNelson16 Web Portfolio</h2>
   </div>
   <div class="nav">
-    <h2>Nav</h2>
+    <div class="navitem">HI</div>
+    <div class="navitem">HEY</div>
+    <div class="navitem"></div>
+    <div class="navitem"></div>
   </div>
   
-  <div class="left" style="background-color:#433d7e;">Column</div>
-  <div class="middle" style="background-color:#1d0335;">Column</div>  
+  <div class="left" style="background-color:#0d3452;">Column</div>
+  <div class="middle" style="background-color:#0d3452;">Column</div>  
   <div class="right" style="background-color:#0d3452;">Column</div>
   
   <div class="footer">
