--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h2>LDNelson16 Web Portfolio</h2>
   </div>
   <div class="nav">
-    <div class="navitem">HI</div>
-    <div class="navitem">HEY</div>
-    <div class="navitem"></div>
-    <div class="navitem"></div>
+    <div class="navitem"><p class="navtext">RECRUITING</p></div>
+    <div class="navitem"><p class="navtext">SEARCH ALGS</p></div>
+    <div class="navitem"><p class="navtext">TBD</p></div>
+    <div class="navitem"><p class="navtext">TBD</p></div>
   </div>
   
   <div class="left" style="background-color:#0d3452;">Column</div>
