--- a/recruiting.html
+++ b/recruiting.html
@@ -8,6 +8,23 @@
   <script type="text/javascript" src="js/functions.js"></script>
  </head>
  <body onload="loadDropdownOptions()">
+  <div class="grid-container">
+    <div class="header">
+      <h2>LDNelson16 Web Portfolio</h2>
+    </div>
+    <div class="nav">
+      <a href="recruiting.html"><div class="navitem"><p class="navtext">RECRUITING</p></div></a>
+      <a href="searchalgs.html"><div class="navitem"><p class="navtext">SEARCH ALGS</p></div></a>
+      <a><div class="navitem"><p class="navtext">TBD</p></div></a>
+      <a><div class="navitem"><p class="navtext">TBD</p></div></a>
+    </div>
+    
+    <div class="body" style="background-color:#0d3452;">Column</div>
+    
+    <div class="footer">
+    <p>Footer</p>
+    </div>
+  </div>
   <div class="header">
     <div class="mainlogo">
       <img src="img/sqrlogo.png" alt="Square logo, click to go back to home page" width="100%" height="auto"/>
