Working on stuff

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/stylesmain.css">
 </head>
 <body>
 
 <div class="grid-container">
   <div class="header">
-    <h2>LDNelson16 Web Portfolio</h2>
+    <h1>LDNelson16 Web Portfolio</h1>
   </div>
   <div class="nav">
     <a href="recruiting.html"><div class="navitem"><p class="navtext">RECRUITING</p></div></a>
