--- a/recruiting.html
+++ b/recruiting.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
  <head>
   <link rel="stylesheet" type="text/css" href="css/styles.css"/>
+  <link rel="stylesheet" type="text/css" href="css/stylesrecruiting.css"/>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Unbiased CFB</title>
@@ -10,7 +11,7 @@
  <body onload="loadDropdownOptions()">
   <div class="grid-container">
     <div class="header">
-      <h2>LDNelson16 Web Portfolio</h2>
+      <h1>Unbiased CFB Recruiting Info</h1>
     </div>
     <div class="nav">
       <a href="recruiting.html"><div class="navitem"><p class="navtext">RECRUITING</p></div></a>
@@ -19,16 +20,15 @@
       <a><div class="navitem"><p class="navtext">TBD</p></div></a>
     </div>
     
-    <div class="body" style="background-color:#0d3452;">Column</div>
+    <div class="body" style="background-color:#0d3452;">
+      <h2>This page collects historical data of over 1000 recruits from each class and allows you to make unbiased composite ranking systems for comparison using 247 Sports, ON3, ESPN, and Rivals recruit ranking data.</h2>
+    </div>
     
     <div class="footer">
     <p>Footer</p>
     </div>
   </div>
   <div class="header">
-    <div class="mainlogo">
-      <img src="img/sqrlogo.png" alt="Square logo, click to go back to home page" width="100%" height="auto"/>
-    </div>
     <div class="title">
       <h1>New Title</h1>
     </div>
