--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1>LDNelson16 Web Portfolio</h1>
   </div>
   <div class="nav">
-    <a href="recruiting.html"><div class="navitem"><p class="navtext">RECRUITING</p></div></a>
+    <a href="newtestingrecruiting.html"><div class="navitem"><p class="navtext">RECRUITING</p></div></a>
     <a href="searchalgs.html"><div class="navitem"><p class="navtext">SEARCH ALGS</p></div></a>
-    <a><div class="navitem"><p class="navtext">TBD</p></div></a>
-    <a><div class="navitem"><p class="navtext">TBD</p></div></a>
+    <a href="tbd.html"><div class="navitem"><p class="navtext">TBD</p></div></a>
+    <a href="tbd.html"><div class="navitem"><p class="navtext">TBD</p></div></a>
   </div>
   
   <div class="left" style="background-color:#0d3452;">Column</div>
