--- a/newtestingrecruiting.html
+++ b/newtestingrecruiting.html
@@ -18,7 +18,7 @@
     </div>
     
     <div class="body" id="body">
-    </div>
+    <label for="dropdown" id="dropdownlabel">Label</label><select id="dropdown"><option value="2023-6-7">2023-6-7</option><option value="2023-6-8">2023-6-8</option><option value="2023-7-5">2023-7-5</option><option value="2023-7-8">2023-7-8</option><option value="2023-7-9">2023-7-9</option><option value="2023-7-10">2023-7-10</option></select></div>
     
     <div class="footer">
     </div>
