JS Action #1 Complete!

--- a/singlecolumnframework.html
+++ b/singlecolumnframework.html
@@ -8,7 +8,7 @@
   <title>Unbiased CFB</title>
   <script type="text/javascript" src="js/functions.js"></script>
  </head>
- <body>
+ <body onload="changeTableColumns()">
   <div class="grid-container" id="grid-container">
     <div class="header" id="header">
     </div>
